[package]
name = "client"
version = "0.1.0"
authors = []
edition = "2021"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "client"
path = "src/main.rs"

[dependencies]
rand = "0.8"
common = { path="../common", features=[] }




# [patch.'https://github.com/bevyengine/bevy']
# bevy = {git = "https://github.com/bevyengine/bevy//", rev="841755aaf23acfd55b375c37390daeb302c5b30b", default-features=false}

# [patch.'https://github.com/mrk-its/bevy_webgl2']
# bevy_webgl2 = {git = "https://github.com/mrk-its/bevy_webgl2//", rev="035236b8d7ec52b8e9e20399662e89c73e4521f6", default-features=false}

[profile.dev]
opt-level = 1

[profile.release]
# lto = true
# opt-level = 's'
