[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
bevy_ecs = "0.6.0"
bevy_ecs_macros = "0.6.0"


# Dependencies for native only.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.6", default-features = false, features = ["bevy_gltf", "bevy_winit", "render", "png", "dynamic", "wayland"] }
rand = "0.8"
[target.'cfg(target_os = "linux")'.dependencies]
winit = { version = "0.24", features=["wayland", "wayland-client"]}
bevy_networking_turbulence = { path= "../libs/bevy_networking_turbulence", default-features=false}

# Dependencies for WASM only.
[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.6", default-features = false, features = ["bevy_gltf", "bevy_winit", "render", "png"] }
#bevy_webgl2 = {version = "0.5.2", path="../libs/bevy_webgl2"}
getrandom = { version="0.2", features=["wasm-bindgen"] }
bevy_networking_turbulence = { path= "../libs/bevy_networking_turbulence", default-features=false, features=["use-webrtc"]}

[features]
default = ["use-udp"]
use-udp = ["bevy_networking_turbulence/use-udp"]
use-webrtc = ["bevy_networking_turbulence/use-webrtc"]
